# lyutmc

./: Cargo.toml  LICENSE  README.md  todo.todo
src/: camera.rs  device.rs  event.rs  input.rs  lib.rs  main.rs  pipeline.rs  shader.rs  surface.rs  texture.rs  window.rs
src/camera/: camera.rs  camera_controller.rs  camera_uniform.rs
src/primitives/: vertex.rs
src/shaders/: cube.wgsl  shader.wgsl  triangle.wgsl
src/shapes/: cube.rs  triangle.rs
