[package]
name = "lyutmc"
version = "0.1.0"
authors = ["Elliot Dewhurst <elliot+github@dewhurst.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"
pollster = "0.3.0"
env_logger = "0.10.0"
log = "0.4.19"